<resources>
    <string name="app_name">СО СКАЛЫ!!!</string>
    <string name="delete_item">УДАЛИТЬ</string>
    <string name="searh">НАЙТИ</string>

    <string name="all">ПОКАЗАТЬ ВСЕХ</string>
    <string name="my">ПОКАЗАТЬ МОИХ</string>

    <string name="navigationView_open">Открыто</string>
    <string name="navigationView_close">Закрыто</string>

    <string name="fragment_login_tv1">чтобы вносить свои записи зарегистрируйтесь
                                      или войдите под своим именем</string>
    <string name="user_name">имя пользователя</string>
    <string name="user_password">пароль</string>
    <string name="registration">регистрация</string>
    <string name="login">войти</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
